libs/pavex_cli/tests/ui_tests/generic_handlers_are_not_supported/expectations/stderr.txt
Error: 
  × One of the input parameters for `app::stream_file::<std::path::PathBuf>`
  │ has a type that I cannot handle.
   ╭─[src/lib.rs:7:1]
 7 │ pub fn blueprint() -> AppBlueprint {
 8 │     AppBlueprint::new().route(f!(crate::stream_file::<std::path::PathBuf>), "/home")
   ·                               ──────────────────────┬─────────────────────
   ·                                                     ╰── The handler was registered here
 9 │ }
   ╰────

Error: 
  × 
   ╭─[src/lib.rs:2:1]
 2 │ 
 3 │ pub fn stream_file<T>(_inner: T) -> http::Response<hyper::body::Body> {
   ·                               ┬
   ·                               ╰── The parameter type that I cannot handle
 4 │     todo!()
   ╰────